--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -11,7 +11,6 @@
 .nav2 {
   display: flex;
   align-items: center;
-  gap: 25px;
 }
 
 .main-logo {
@@ -57,7 +56,7 @@
 .search-button {
   position: absolute;
   top: 50%;
-  right: 3rem;
+  right: 1.5rem;
   transform: translateY(-50%);
   border: none;
   background: transparent;
@@ -68,6 +67,7 @@
   background: transparent;
   border: none;
   cursor: pointer;
+  margin: 0 25px;
 }
 
 .sign-in-button {
