added food update page

--- a/client/src/pages/UpdatePage/UpdatePage.css
+++ b/client/src/pages/UpdatePage/UpdatePage.css
@@ -20,3 +20,9 @@
 .update-page-section button:hover {
   background-color: #0056b3;
 }
+
+.update-page-components {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+}
