--- a/client/src/pages/DeletePage/DeletePage.css
+++ b/client/src/pages/DeletePage/DeletePage.css
@@ -8,6 +8,12 @@
   margin: 30px 0;
 }
 
+.delete-page-components {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+}
+
 .delete-page-section button {
   background-color: #007bff;
   color: #fff;
