--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -39,6 +39,19 @@
   background: #fff;
 }
 
+.api-button {
+  padding: 10px 15px;
+  border-radius: 10px;
+  border: none;
+  background: #202020;
+  color: #fdfbfa;
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+
 .nav-input::placeholder {
   color: #808080;
   font-family: Inter;
@@ -61,6 +74,17 @@
   border: none;
   background: transparent;
   cursor: pointer;
+}
+
+.language-select {
+  background-color: lightgray;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  margin: 0 30px 0 0;
 }
 
 .card-button {
