--- a/client/src/components/Main/Main.css
+++ b/client/src/components/Main/Main.css
@@ -134,6 +134,25 @@
   cursor: pointer;
 }
 
+.main-quote {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  margin: 50px 0 30px 0;
+  max-width: 85%;
+  border-left: 4px solid #fc8019;
+  padding-left: 20px; 
+  font-style: italic;
+}
+
+.quote-author {
+  font-size: 18px;
+  color: #666;
+  font-style: italic;
+  padding-left: 20px; 
+}
+
+
 @keyframes moveBanana {
   0% {
     transform: translateX(0);
