--- a/client/src/components/Categories/Categories.css
+++ b/client/src/components/Categories/Categories.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  width: fit-content;
 }
 
 .category-card p {
@@ -33,6 +34,6 @@
 .category-img {
   width: 160px;
   height: 160px;
-  border-radius: 160px;
+  border-radius: 100%;
   object-fit: cover;
 }
