--- a/client/src/pages/RestaurantPage/RestaurantPage.css
+++ b/client/src/pages/RestaurantPage/RestaurantPage.css
@@ -257,7 +257,7 @@
   font-weight: 500;
   line-height: normal;
   left: 50%;
-  bottom: 20%;
+  bottom: 60%;
   transform: translateX(-50%);
 }
 
@@ -267,4 +267,26 @@
   flex-shrink: 0;
   stroke-width: 1px;
   stroke: #808080;
+}
+
+.quantity-selector {
+  display: flex;
+  align-items: center;
+}
+
+.quantity-selector-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 0 5px;
+}
+
+.selected-quantity {
+  font-size: 16px;
+  margin: 0 10px;
 }
