--- a/client/src/pages/UserProfilePage/UserProfilePage.css
+++ b/client/src/pages/UserProfilePage/UserProfilePage.css
@@ -1,5 +1,3 @@
-
-
 .page-title {
   font-size: 24px;
   margin-bottom: 20px;
@@ -17,6 +15,7 @@
 }
 
 .order-card {
+  position: relative;
   background-color: #f9f9f9;
   border-radius: 10px;
   padding: 20px;
@@ -95,4 +94,20 @@
 
 .rate-button:hover {
   background-color: #0056b3;
+}
+
+.delete-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px;
+  background-color: transparent;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+#delete-icon {
+  width: 15px;
+  height: 15px;
 }
