--- a/client/src/components/Categories/Categories.css
+++ b/client/src/components/Categories/Categories.css
@@ -1,3 +1,5 @@
+
+
 .categories-header {
   color: #202020;
   font-family: Poppins;
@@ -10,15 +12,17 @@
 .categories {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  margin: 60px 0;
+  gap: 30px;
+}
+
+.categories-slider {
+  margin: 50px auto;
 }
 
 .category-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
   width: fit-content;
+  margin: 0;
+  padding: 0;
 }
 
 .category-card p {
