--- a/client/src/pages/RestaurantPage/RestaurantPage.css
+++ b/client/src/pages/RestaurantPage/RestaurantPage.css
@@ -138,7 +138,7 @@
   margin-top: 60px;
 }
 
-.categories {
+.restaurant-page-categories {
   display: flex;
   flex-direction: column;
   margin: 0;
