--- a/client/src/pages/AdminPage/AdminPage.css
+++ b/client/src/pages/AdminPage/AdminPage.css
@@ -1,36 +1,81 @@
-.adminPage {
-  text-align: center;
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
 }
 
-.admin-page-heading {
-  margin-bottom: 20px;
+.admin-container {
+  display: flex;
+  height: 100%;
+}
+
+.admin-sidebar {
+  width: 210px;
+  background-color: #f4f4f4;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.admin-content {
+  flex: 1;
+  padding: 20px;
+}
+
+.sidebar-heading {
+  font-size: 20px;
+  margin-bottom: 10px;
+  padding: 10px;
+  color: #333;
+}
+
+.sidebar-menu {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  flex-grow: 1;
+}
+
+.sidebar-menu li {
+  margin-bottom: 10px;
+}
+
+.sidebar-menu li a {
+  text-decoration: none;
+  color: #333;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.sidebar-menu li a:hover {
+  background-color: #ddd;
+  color: #000;
 }
 
 .return-button {
-  background-color: #dc3545;
+  background-color: #fc8019;
   color: #fff;
   border: none;
   padding: 10px 20px;
   border-radius: 4px;
   cursor: pointer;
-  margin-bottom: 20px;
+  margin-top: 20px;
+  transition: background-color 0.3s;
 }
 
 .return-button:hover {
-  background-color: #c82333;
+  background-color: #e86800;
 }
 
-.admin-button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-right: 10px;
+.selected {
+  background-color: #ddd;
+  border-radius: 5px;
+  color: #000;
 }
-
-.admin-button:hover {
-  background-color: #0056b3;
-}
-
