--- a/client/src/components/AdminComponents/AdminComponents.css
+++ b/client/src/components/AdminComponents/AdminComponents.css
@@ -1,3 +1,65 @@
+.admin-sidebar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 210px;
+  background-color: #f4f4f4;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar-heading {
+  font-size: 20px;
+  margin-bottom: 10px;
+  padding: 10px;
+  color: #333;
+}
+
+.sidebar-menu {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  flex-grow: 1;
+}
+
+.sidebar-menu li {
+  margin-bottom: 10px;
+}
+
+.sidebar-menu li a {
+  text-decoration: none;
+  color: #333;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.sidebar-menu li a:hover {
+  background-color: #ddd;
+  color: #000;
+}
+
+.return-button {
+  background-color: #fc8019;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: auto;
+  transition: background-color 0.3s;
+}
+
+.return-button:hover {
+  background-color: #e86800;
+}
+
 .admin-menu-button {
   padding: 5px 10px;
   margin: 0;
@@ -12,4 +74,81 @@
   border: none;
   cursor: pointer;
   background-color: transparent;
+}
+
+.admin-restaurants {
+  margin-left: 210px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+  padding: 20px;
+}
+
+.restaurant-card {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 16px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.restaurant-card h2 {
+  font-size: 1.5rem;
+  margin-bottom: 8px;
+}
+
+.restaurant-card p {
+  font-size: 1rem;
+  color: #666;
+}
+
+.admin-container {
+  position: relative;
+}
+
+.hero-section-card {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.delete-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: red;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  width: fit-content;
+  height: fit-content;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  transition: 0.5s;
+}
+
+.delete-button:hover {
+  background-color: #d93636;
+  transition: 0.5s;
+}
+
+.create-restaurant-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #f4a15e;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.create-restaurant-button:hover {
+  background-color: #fc8019;
+  transition: 0.3s;
 }
