--- a/client/src/components/AdminComponents/Sidebar/Sidebar.css
+++ b/client/src/components/AdminComponents/Sidebar/Sidebar.css
@@ -82,98 +82,10 @@
   background-color: transparent;
 }
 
-.admin-restaurants {
+.admin-items {
   margin-left: 210px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 20px;
   padding: 20px;
-}
-
-.restaurant-card {
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 16px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.restaurant-card h2 {
-  font-size: 1.5rem;
-  margin-bottom: 8px;
-}
-
-.restaurant-card p {
-  font-size: 1rem;
-  color: #666;
-}
-
-.admin-container {
-  position: relative;
-}
-
-.hero-section-card {
-  position: relative;
-  margin-bottom: 20px;
-}
-
-.delete-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background-color: red;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  width: fit-content;
-  height: fit-content;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
-  transition: 0.5s;
-}
-
-.delete-button:hover {
-  background-color: #d93636;
-  transition: 0.5s;
-}
-
-.create-restaurant-button {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #f4a15e;
-  color: #fff;
-  padding: 10px 25px;
-  border: none;
-  border-radius: 5px;
-  text-decoration: none;
-  font-size: 42px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.create-restaurant-button:hover {
-  background-color: #fc8019;
-  transition: 0.3s;
-}
-
-.update-button {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  background-color: #4caf50;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 8px 12px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  z-index: 1;
-}
-
-.update-button:hover {
-  background-color: #388e3c;
 }
