--- a/client/src/components/AdminModals/Categories/style.css
+++ b/client/src/components/AdminModals/Categories/style.css
@@ -155,3 +155,67 @@
 .category-create-modal button:hover {
   background-color: #fc8019;
 }
+
+.update-category-modal {
+  background-color: #ffffff;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+  max-width: 400px;
+  width: 90%;
+  position: relative;
+  overflow: hidden;
+  animation: slideIn 0.5s ease forwards;
+}
+
+.update-category-modal .close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  color: #333333;
+  background-color: transparent;
+  border: none;
+  transition: color 0.3s ease;
+  width: fit-content;
+}
+
+.update-category-modal .close-button:hover {
+  color: #000;
+  transition: 0.3s;
+}
+
+.update-category-modal h2 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.update-category-modal label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.update-category-modal input,
+.update-category-modal select,
+.update-category-modal button {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+.update-category-modal button {
+  background-color: #f4a15e;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.update-category-modal button:hover {
+  background-color: #fc8019;
+}
+
