--- a/client/src/components/AdminComponents/Dishes/Dishes.css
+++ b/client/src/components/AdminComponents/Dishes/Dishes.css
@@ -1,6 +1,6 @@
 .dish-card {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px;
   padding: 10px;
 }
